--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,24 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>insta bio swag bio quotes instagram cool bio quotes ideas insta bio for boysvinsta bio for girl instabio - add
+    link
+    in bio create your bio site bios for
+    instagram - killer bios captions for instagram and facebook photos 2021 smart bio for instagram bios and captions
+    insta bios
+    insta bio smart bio best hashtag bios idea - bios for instagram - quotes bios</title>
 
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="Keywords" content="insta bio,swag bio quotes,instagram,insta bio for boys,insta bio for girl,cool bio quotes ideas,instabio - add link in bio create your bio site,bios for instagram -
+  killer bios,captions for instagram and facebook photos 2021,smart bio for instagram,bios and captions,insta bios
+  insta bio smart bio best hashtag bios idea - bios for instagram - quotes bios">
+  <meta name="Description" content="insta bio swag bio quotes instagram cool bio quotes ideas instabio - add link in bio create your bio site bios for instagram -
+  killer bios captions for instagram and facebook photos 2021 smart bio for instagram bios and captions insta bios
+  insta bio smart bio best hashtag bios idea - bios for instagram - quotes bios">
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
